fix: make JVM agent bootstrap portable